* 2013-08-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG

* 2013-08-20 - thorben.betten@open-xchange.com

 - Preparation to fix bug 28163: Don't perform any image transformation if not needed as signaled by URL parameters and/or image type

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Restrict socket binding to local loopback address only by default, disable Hazelcast's REST and Memcache client 
                      request listener services by default 
 - Fix for bug 28317: Invalidate all other user sessions after password change

* 2013-08-07 - martin.herfurth@open-xchange.com

 - Fix for bug 26475: Bad calculation of recurrence date position of a change exception on delete.
 - Fix for bug 27238: Handle empty organizer field on delete.

* 2013-08-07 - thorben.betten@open-xchange.com

 - Fix for bug 27911: Fixed possible ArrayIndexOutOfBoundsException when transferring bytes from ByteChunk to a byte array
 - Fix for bug 28099: Check for missing members in SOAP request
 - Fix for bug 27745: Restore old lenient behavior of Apache CXG on SOAP request handling

* 2013-08-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 28021: Try and detect charset when delivering text/plain files
 - Fix for bug 28071: Optionally ignore UID during iCal import

* 2013-08-06 - thorben.betten@open-xchange.com

 - Fix for bug 27849: Add an option to specify characters that are not allowed to be contained in a mailbox name
 - Fix for bug 28070: Retry with "MS932" charset if "Shift-JIS" charset yields \ufffd
 - Fix for bug 28087: Properly resolve "Unified Mail"-encoded message path

* 2013-08-05 - thorben.betten@open-xchange.com

 - Fix for bug 28039: Added null guard to SOAP call

* 2013-08-01 - marcus.klein@open-xchange.com

 - Fix for bug 27840: Switched task types for actual and target costs to DECIMAL(12,2) in the database and BigDecimal in Java to be able to