@@ -1,3 +1,7 @@
+* 2013-08-23 - thorben.betten@open-xchange.com
+
+ - Fix for bug 28483: Try to recover from "Content-Type" header with empty parameters
+
 * 2013-08-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG
